--- a/content/frontpage.css
+++ b/content/frontpage.css
@@ -5,58 +5,90 @@
 }
 
 header{
-	background-image: linear-gradient(rgba(0,0,0,0.5), rgba(0,0,0,0.5)), url('IMG-20200822-WA0016.jpg');
-	border-radius: 55px;
+	background-image: linear-gradient(rgba(36, 50, 121, 0.5), rgba(53, 10, 42, 0.8)), url('IMG-20200822-WA0016.jpg');
+	/* border-radius: 55px; */
 	border-color: white;
 	height:100vh;
 	background-size:cover;
-	background position:center; 
+	background-position:center; 
 }
 
 .top{
-	position: absolute;
+	/* position: absolute;
 	width: auto;
 	margin-left: 0;
-	margin-top: 0 ;
+	margin-top: 0 ; */
 }
 h1{
-	color: red;
-	font-size: 75px;
+	color: white;
+	font-size: 5em;
 	font-family: "Verdana","sans-serif";
 	text-align: top;
-	margin-top: 150px;
-}
-.tagline{
-	position: absolute;
-	width: 1300px;
-	margin-left: 0;
-	margin-top; 0
+	text-transform: uppercase;
 }
 
-h2{
+@media screen and (max-width:1024px){
+	h1{
+		font-size: 2.7em;
+	}
+}
+
+h1 span{
+	color: #ff9e00;
+}
+.tagline{
+	/* position: absolute; */
+	/* width: 1300px; */
+	/* margin-left: 0;
+	margin-top:0; */
+}
+
+p{
 	color: white;
-	font-size: 50px;
-	font-family: "Verdana","sans-serif";
-	text-align: center;
-	margin-top: 275px;
+	font-size: 1.4em;
+	/* font-family: "Verdana","sans-serif"; */
+	/* margin-top: 275px; */
+	padding: 0 15px;
+	padding-top: 15px;
+	position: relative;
+}
+
+p::after{
+	content: "";
+	width: 100px;
+	height: 5px;
+	background-color: #ff9e00;
+	margin: 0 auto;
+	display: block;
+margin-top: 25px;
 
 }
 
 .Donate{
-	margin-top: 30px;
-	margin-left: 540px;
+padding: 30px 0;
 }
 
-.bttn{
+.Donate .bttn{
 	border:1px solid white;
-	padding: 10px 30px;
-	color: yellow;
+	/* padding: 10px 30px; */
+	color: #ff9e00;
 	font-family: "Verdana", "sans-serif";
 	font-size: 22px;
 	text-decoration: none;
-
+	padding: 10px;
+border-radius: 5px;
+transition: background .3s ease;
 }
 
 .Donate a:hover{
 	background-color: black;
+}
+
+.header-page-content{
+	display: flex;
+	height: 100%;
+	width: 100%;
+	justify-content: center;
+align-items: center;
+text-align: center;
 }
